added install-dkms rule

--- a/src/dkms.conf
+++ b/src/dkms.conf
@@ -1,5 +1,5 @@
 PACKAGE_NAME="bluenoc"
-PACKAGE_VERSION="2015.09.beta1"
+PACKAGE_VERSION="@VERSION@"
 BUILT_MODULE_NAME[0]="bluenoc"
 DEST_MODULE_LOCATION[0]="/extra/fpga"
 AUTOINSTALL="yes"
